--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,31 @@
-.top {
+body {
+    margin: 30px;
+}
+
+/* .top {
     margin-top: 50px;
+} */
+
+.history {
+    /* margin-top: 20px; */
+}
+
+.header {
+    width: 100%;
+    /* margin-top: 20px; */
+}
+
+
+h1 {
+    font-family: verdana;
+}
+
+img {
+    width: 170px;
+    border-radius: 6px;
+}
+
+.email {
+    /* justify-content: flex-end;
+    align-self: flex-end; */
 }
