--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,12 @@ body {
 
 .header {
     width: 100%;
+
+}
+
+.main-header {
+    color: #223770;
+
 }
 
 
@@ -12,6 +18,49 @@ h1 {
 }
 
 img {
-    width: 170px;
+    width: 130px;
     border-radius: 6px;
+}
+
+.navbar {
+    border-color: blue;
+    margin-bottom: 30px;
+    /* background: #203e63; */
+
+}
+
+.back-image {
+    /* background: url(/Users/christianbaidoo/Desktop/TGIF/image/merican.png);
+    background-size: cover;
+    border-radius: 6px;
+    padding: 20px;
+    padding-right: -30px;
+    margin-right: 0px; */
+
+}
+
+.jumbotron {
+    padding-top: 15px;
+    padding-bottom: 15px;
+
+
+}
+
+
+
+.font-white {
+    color: white;
+}
+
+.background-image {
+    /* background: url(/Users/christianbaidoo/Desktop/TGIF/image/merican.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 200px; */
+    /* border: 1px solid red;
+    border-radius: 6px; */
+}
+
+.navy-blue {
+    background: url(/Users/christianbaidoo/Desktop/TGIF/image/Prde-and-Freedom.png);
 }
