--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,11 @@ body {
     margin: 30px;
 }
 
+html {
+    scroll-behavior: smooth;
+
+}
+
 .header {
     width: 100%;
 
@@ -10,6 +15,26 @@ body {
 .main-header {
     color: #223770;
 
+}
+
+.btn {
+    -webkit-transition-property: width;
+    /* Safari */
+    -webkit-transition-duration: 2s;
+    /* Safari */
+    transition-property: width;
+    transition-duration: 2s;
+
+}
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+    font-size: 20px;
 }
 
 
@@ -93,14 +118,7 @@ label {
 
 .social {
     text-align: center;
-}
-
-.fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 50px;
-    text-align: center;
+    margin: -10px;
     text-decoration: none;
-    margin: 5px 2px;
-    margin-top: 0,
+
 }
