--- a/css/main.css
+++ b/css/main.css
@@ -61,10 +61,7 @@ label {
 .jumbotron {
     padding-top: 15px;
     padding-bottom: 15px;
-
-
 }
-
 
 
 .font-white {
@@ -72,20 +69,22 @@ label {
 }
 
 .btn {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 .navy-blue {
-    background: url(/Users/christianbaidoo/Desktop/TGIF/image/Prde-and-Freedom.png);
+    background: url(../image/Prde-and-Freedom.png);
 }
+
+
 
 #loader {
     border: 5px solid #f2f2f2;
-    position: relative;
+    position: ab;
     margin-top: 50px;
     left: 40%;
-    top: 100%;
-    z-index: 1;
+    top: 0;
+    z-index: 99;
     border-radius: 50%;
     border-top: 5px solid #114484;
     width: 150px;
@@ -121,4 +120,22 @@ label {
     margin: -10px;
     text-decoration: none;
 
+}
+
+.my-custom-scrollbar {
+    position: relative;
+    height: 500px;
+    overflow: auto;
+}
+
+.table-wrapper-scroll-y {
+    display: block;
+    margin-bottom: 20px;
+
+
+}
+
+.fixed {
+    position: sticky;
+    top: 0;
 }
